tests/files/lexer_tests/should_fail/036.cmdr
// Illegal character in variable name (ascii 3)
myvar = 3;